--- a/src/app/study-years-exams/study-years-exams.component.html
+++ b/src/app/study-years-exams/study-years-exams.component.html
@@ -1,5 +1,7 @@
-<app-header>
-</app-header>
+<app-header></app-header>
+
+<div class="path d-flex justify-content-center align-items-center mt-3"> {{Path.universtity}} <i class="fas fa-angle-double-right px-3"></i>{{Path.faculty}} <i class="fas fa-angle-double-right px-3"></i>{{Path.studyYear}}</div>
+
 <section class="studyExamYear container">
     <div class="row">
         <div class="col-12"></div>
@@ -7,6 +9,8 @@
             There Are No Exams Yet 
         </div>
     </div>
+
+
 
 
 
