--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <app-header></app-header>
 <section class="headerSlider mb-5">
     <ngb-carousel *ngIf="images">
@@ -67,11 +68,15 @@
             
             <div class="form-group col-6 offset-3 mb-5">
             <label class="control-label" for="City">Study Year:</label>
-            <select class="form-control input-lg" id="StudyYear">
-                <option *ngIf="!selectedFaculty" value="0">Select Study Year</option>
+            <select class="form-control input-lg" id="StudyYear"  [(ngModel)]="selectedYear"  (change)="onSelectYear($event.target.value)">
+                <!-- <option *ngIf="!selectedFaculty" value="0">Select Study Year</option> -->
+                <option value="0">Select Faculty</option>
+
                 <option *ngFor="let StudyYear of StudyYears" value={{StudyYear.id}}> {{StudyYear.name}}</option>
             </select>
         </div>
+
+      
 
         <div class="form-group col-12 text-center">
             <button class="primary_button" (click)="StudyYearsExams()"> View results</button>
